--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,5 +1,11 @@
-server {
-    listen 443;
-    server_name ${DOMAIN_NAME};
+events {}
 
+http {
+    server {
+        listen 443;
+        server_name ${DOMAIN_NAME};
+
+        #ssl_certificate ${SSL_CERT_PATH};
+        #ssl_certificate_key ${SSL_KEY_PATH};
+    }
 }
