--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,11 +1,16 @@
-events {}
+events {
+    worker_connections 1024;
+    multi_accept on;
+}
 
 http {
     server {
-        listen 443;
+        listen 443 ssl;
         server_name ${DOMAIN_NAME};
 
-        #ssl_certificate ${SSL_CERT_PATH};
-        #ssl_certificate_key ${SSL_KEY_PATH};
+        ssl_certificate ${CERTIFICATE_PATH};
+        ssl_certificate_key ${PRIVATE_KEY_PATH};
+
+        ssl_protocols TLSv1.2 TLSv1.3;
     }
 }
