--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -8,8 +8,8 @@ http {
         listen 443 ssl;
         server_name ${DOMAIN_NAME};
 
-        ssl_certificate ${CERTIFICATE_PATH};
-        ssl_certificate_key ${PRIVATE_KEY_PATH};
+        ssl_certificate /etc/nginx/certs/certificate.crt;
+        ssl_certificate_key /etc/nginx/certs/private.key;
 
         ssl_protocols TLSv1.2 TLSv1.3;
     }
