Switch to Alpine

--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,13 +1,13 @@
-FROM debian:bullseye
+FROM alpine:3.17
 
-# Install Nginx
-RUN apt update && apt-get install -y nginx openssl && apt clean && rm -rf /var/lib/apt/lists/*
+# Install Nginx and OpenSSL
+RUN apk update && apk add nginx openssl && rm -rf /var/cache/apk/*
 
 # Create SSL directory
 RUN mkdir /etc/nginx/certs
 
-# Expose the port 443 for access
+# Expose port 443 for access
 EXPOSE 443/tcp
 
 # Run the Nginx server
-CMD ["/usr/sbin/nginx", "-g", "daemon off;"]
+CMD ["nginx", "-g", "daemon off;"]
