--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:3.17
 
 # Install Nginx and OpenSSL
-RUN apk update && apk add nginx openssl && rm -rf /var/cache/apk/*
+RUN apk update && apk --no-cache add nginx openssl && rm -rf /var/cache/apk/*
 
 # Expose port 443 for access
 EXPOSE 443/tcp
