--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,42 @@
 version: '3.9'
 
 services:
+
+  wordpress:
+    build:
+      context: .
+      dockerfile: ./srcs/requirements/wordpress/Dockerfile
+    restart: unless-stopped
+    ports:
+      - "9000:9000"
+    networks:
+      wp_network:
+        aliases:
+          - wp
+    env_file:
+      - .env
+    volumes:
+      - ./data/wp_data:/var/www/html
+
   nginx:
     build:
       context: .
       dockerfile: ./srcs/requirements/nginx/Dockerfile
+    depends_on:
+      - wordpress
+    restart: unless-stopped
     ports:
       - "443:443"
     networks:
-      my_network:
+      wp_network:
         aliases:
           - nginx
+    env_file:
+      - .env
     volumes:
       - ${CERTS_SSL}:/etc/nginx/certs/
       - ./srcs/requirements/nginx/conf/nginx.conf:/etc/nginx/nginx.conf
-    env_file:
-      - .env
+      - ./data/wp_data:/usr/share/nginx/html
 
 networks:
-  my_network: #bridge
+  wp_network:
