--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 DOMAIN_NAME=mbozzi.42.fr
 # ssl certificates
 CERTS_SSL=/home/mbozzi/Scrivania/42Inception/certs/
+# MYSQL SETUP
+MYSQL_ROOT_PASSWORD=thegoat
+MYSQL_USER=mbozzi
+MYSQL_PASSWORD=ktm42
