--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -4,8 +4,8 @@ services:
 
   mariadb:
     build:
-      context: .
-      dockerfile: ./srcs/requirements/mariadb/Dockerfile
+      context: ./requirements/mariadb/
+      dockerfile: Dockerfile
     networks:
       inception_network:
         aliases:
@@ -13,13 +13,13 @@ services:
     env_file:
       - .env
     volumes:
-      - ./data/db_data:/var/lib/mysql
+      - db_volume:/var/lib/mysql
     restart: unless-stopped
 
   wordpress:
     build:
-      context: .
-      dockerfile: ./srcs/requirements/wordpress/Dockerfile
+      context: ./requirements/wordpress/
+      dockerfile: Dockerfile
     depends_on:
       - mariadb
     networks:
@@ -34,8 +34,8 @@ services:
 
   nginx:
     build:
-      context: .
-      dockerfile: ./srcs/requirements/nginx/Dockerfile
+      context: ./requirements/nginx/
+      dockerfile: Dockerfile
     depends_on:
       - wordpress
     ports:
@@ -48,9 +48,23 @@ services:
       - .env
     volumes:
       - ${CERTS_SSL}:/etc/nginx/certs/
-      - ./srcs/requirements/nginx/conf/nginx.conf:/etc/nginx/nginx.conf
-      - ./data/wp_data:/usr/share/nginx/html
     restart: unless-stopped
 
 networks:
   inception_network:
+
+volumes:
+  db_volume:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: "/home/mbozzi/Scrivania/42Inception/data/db_data"
+    name: "db_volume"
+  wp_volume:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: "/home/mbozzi/Scrivania/42Inception/data/wp_data"
+    name: "wp_volume"
