--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,10 +1,9 @@
 FROM alpine:3.17
 
-# Install Nginx and OpenSSL
 RUN apk update && apk --no-cache add nginx openssl && rm -rf /var/cache/apk/*
 
-# Expose port 443 for access
+COPY conf/nginx.conf /etc/nginx/nginx.conf
+
 EXPOSE 443/tcp
 
-# Run the Nginx server
 CMD ["nginx", "-g", "daemon off;"]
