--- a/srcs/.env
+++ b/srcs/.env
@@ -5,3 +5,4 @@ CERTS_SSL=/home/mbozzi/Scrivania/42Inception/certs/
 MYSQL_ROOT_PASSWORD=thegoat
 MYSQL_USER=mbozzi
 MYSQL_PASSWORD=ktm42
+MYSQL_DATABASE=wordpress
