--- a/srcs/requirements/mariadb/conf/my.cnf
+++ b/srcs/requirements/mariadb/conf/my.cnf
@@ -1,5 +1,5 @@
 [mysqld]
-user = mysql
+user = root
 socket = /var/run/mysqld/mysqld.sock
 port = 3306
 basedir = /usr
@@ -7,15 +7,7 @@ datadir = /var/lib/mysql
 tmpdir = /tmp
 lc-messages-dir = /usr/share/mysql
 
-# Impostazioni per le transazioni e l'isolamento
-transaction_isolation = READ-COMMITTED
-innodb_strict_mode = 1
-
-# Impostazioni per la codifica dei caratteri
-character-set-server = utf8mb4
-collation-server = utf8mb4_general_ci
-
-# Ottimizzazioni per le prestazioni
+# Performance optimizer
 key_buffer_size = 16M
 max_allowed_packet = 16M
 thread_stack = 192K
@@ -24,9 +16,9 @@ query_cache_limit = 1M
 query_cache_size = 16M
 innodb_buffer_pool_size = 128M
 
-# Abilita il logging degli errori
+# Error Logging
 log_error = /var/log/mysql/error.log
 
-# Impostazioni di sicurezza
+# Connession
 bind-address = 0.0.0.0
 
