--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -6,7 +6,7 @@ events {
 http {
     server {
         listen 443 ssl;
-        server_name ${DOMAIN_NAME};
+        server_name mbozzi.42.fr;
 
         ssl_certificate /etc/nginx/certs/certificate.crt;
         ssl_certificate_key /etc/nginx/certs/private.key;
@@ -19,18 +19,18 @@ http {
         access_log /var/log/nginx/access.log;
         error_log /var/log/nginx/error.log;
 
-    #    location / {
-    #    try_files $uri $uri/ /index.php?$args;
-    #    }
+        location / {
+        try_files $uri $uri/ /index.php?$args;
+        }
 
-    #    location ~ \.php$ {
-    #    try_files $uri =404;
-    #    fastcgi_split_path_info ^(.+\.php)(/.+)$;
-    #    fastcgi_pass wordpress:9000;
-    #    fastcgi_index index.php;
-    #    include fastcgi_params;
-    #    fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-    #    fastcgi_param PATH_INFO $fastcgi_path_info;
-    #    }
+        location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass wp:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+        }
     }
 }
