--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -6,7 +6,7 @@ events {
 http {
     server {
         listen 443 ssl;
-        server_name $DOMAIN_NAME;
+        server_name ${DOMAIN_NAME};
 
         ssl_certificate /etc/nginx/certs/certificate.crt;
         ssl_certificate_key /etc/nginx/certs/private.key;
