--- a/srcs/requirements/mariadb/conf/my.cnf
+++ b/srcs/requirements/mariadb/conf/my.cnf
@@ -16,4 +16,10 @@ query_cache_size = 16M
 innodb_buffer_pool_size = 128M
 
 # Connession
-bind-address = 127.0.0.1
+bind-address = 0.0.0.0
+
+#Error
+log_error=/var/log/mysql/error.log
+
+character-set-server  = utf8mb4
+collation-server      = utf8mb4_general_ci
