--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -8,7 +8,8 @@ http {
 
     server {
         listen 443 ssl;
-        server_name ${DOMAIN_NAME};
+        listen [::]:443 ssl;
+        server_name mbozzi.42.fr;
 
         ssl_certificate /etc/nginx/certs/certificate.crt;
         ssl_certificate_key /etc/nginx/certs/private.key;
