--- a/srcs/requirements/wordpress/conf/php.ini
+++ b/srcs/requirements/wordpress/conf/php.ini
@@ -2,3 +2,5 @@ memory_limit = 256M
 max_execution_time = 300
 upload_max_filesize = 64M
 post_max_size = 64M
+max_input_vars = 1000
+date.timezone = "Europe/Rome"
