--- a/srcs/.env
+++ b/srcs/.env
@@ -6,3 +6,6 @@ MYSQL_ROOT_PASSWORD=thegoat
 MYSQL_USER=mbozzi
 MYSQL_PASSWORD=ktm42
 MYSQL_DATABASE=wordpress
+#FTP
+FTP_USER=mabozz
+FTP_USER_PASS=forzabari
