--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -53,7 +53,7 @@ services:
 
   redis:
     build:
-      context: ./requirements/redis/
+      context: ./requirements/bonus/redis
       dockerfile: Dockerfile
     depends_on:
       - wordpress
@@ -65,7 +65,7 @@ services:
 
   ftp:
     build:
-      context: ./requirements/ftp/
+      context: ./requirements/bonus/ftp
       dockerfile: Dockerfile
     depends_on:
       - mariadb
@@ -79,6 +79,20 @@ services:
       - .env
     volumes:
       - wp_volume:/ftp
+    restart: unless-stopped
+
+  adminer:
+    build:
+      context: ./requirements/bonus/adminer
+      dockerfile: Dockerfile
+    depends_on:
+    - mariadb
+    ports:
+      - "8080:8080"
+    networks:
+      inception_network:
+        aliases:
+          - adm
     restart: unless-stopped
 
 networks:
