adminer reverse proxy

--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -36,4 +36,17 @@ http {
         fastcgi_param PATH_INFO $fastcgi_path_info;
         }
     }
+
+    server {
+        listen 8080;
+        server_name adminer.mbozzi.42.fr;
+        root /var/www/html;
+
+        location / {
+            proxy_pass http://adm:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+    }
 }
