--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -40,10 +40,25 @@ http {
     server {
         listen 8080;
         server_name adminer.mbozzi.42.fr;
+
         root /var/www/html;
 
         location / {
             proxy_pass http://adm:8080;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+    }
+
+    server {
+        listen 80;
+        server_name mimmomodem.42.fr;
+
+        root /var/www/html;
+
+        location / {
+            proxy_pass http://web;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
