--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -39,7 +39,7 @@ http {
 
     server {
         listen 8080;
-        server_name adminer.mbozzi.42.fr;
+        server_name adminer.42.fr;
 
         root /var/www/html;
 
@@ -59,6 +59,18 @@ http {
 
         location / {
             proxy_pass http://web;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        }
+    }
+
+    server {
+        listen 9042;
+        server_name portainer.42.fr;
+
+        location / {
+            proxy_pass http://portainer:9000;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
