--- a/srcs/.env
+++ b/srcs/.env
@@ -1,6 +1,6 @@
 DOMAIN_NAME=mbozzi.42.fr
 # ssl certificates
-CERTS_SSL=/home/mbozzi/Scrivania/42Inception/certs/
+CERTS_SSL=/home/${USER}/.certs/
 # MYSQL SETUP
 MYSQL_ROOT_PASSWORD=thegoat
 MYSQL_USER=mbozzi
