--- a/srcs/requirements/bonus/static_website/conf/nginx.conf
+++ b/srcs/requirements/bonus/static_website/conf/nginx.conf
@@ -7,6 +7,7 @@ http {
 
     server {
         listen 80;
+        listen [::]:80;
         server_name mimmomodem.42.fr;
 
         root /var/www/html;
