--- a/srcs/requirements/bonus/adminer/conf/php.ini
+++ b/srcs/requirements/bonus/adminer/conf/php.ini
@@ -1,9 +1,7 @@
-display_errors = On
-error_reporting = E_ALL
 max_execution_time = 60
 memory_limit = 128M
 
-extension=mysqli
+extension=mysqli.so
 extension=session
 
 error_log = /var/log/php_errors.log
