--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -8,13 +8,12 @@ http {
 
     server {
         listen 443 ssl;
-        listen [::]:443 ssl;
         server_name mbozzi.42.fr;
 
         ssl_certificate /etc/nginx/certs/certificate.crt;
         ssl_certificate_key /etc/nginx/certs/private.key;
 
-        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_protocols TLSv1.3;
 
         root /var/www/html;
         index index.php;
