--- a/srcs/requirements/bonus/adminer/conf/php.ini
+++ b/srcs/requirements/bonus/adminer/conf/php.ini
@@ -1,8 +1,9 @@
 max_execution_time = 60
 memory_limit = 128M
 
-extension=mysqli.so
-extension=session
+extension = openssl.so
+extension = mysqlnd.so
+extension = session.so
 
 error_log = /var/log/php_errors.log
 
@@ -11,3 +12,4 @@ session.use_cookies = 1
 session.use_only_cookies = 1
 session.name = PHPSESSID
 
+date.timezone = "Europe/Rome"
