--- a/srcs/requirements/bonus/ftp/conf/vsftpd.conf
+++ b/srcs/requirements/bonus/ftp/conf/vsftpd.conf
@@ -16,7 +16,8 @@ connect_from_port_20=NO
 chroot_local_user=YES
 allow_writeable_chroot=YES
 pasv_enable=YES
-pasv_address=localhost
+pasv_address=ftp
 pasv_min_port=40000
 pasv_max_port=40100
-pasv_addr_resolve=NO
+pasv_addr_resolve=YES
+seccomp_sandbox=NO
