--- a/srcs/requirements/bonus/adminer/conf/php.ini
+++ b/srcs/requirements/bonus/adminer/conf/php.ini
@@ -2,7 +2,7 @@ max_execution_time = 60
 memory_limit = 128M
 
 extension = openssl.so
-extension = mysqlnd.so
+extension = mysqli.so
 extension = session.so
 
 error_log = /var/log/php_errors.log
