Wp auto install

--- a/srcs/.env
+++ b/srcs/.env
@@ -6,6 +6,11 @@ MYSQL_ROOT_PASSWORD=thegoat
 MYSQL_USER=mbozzi
 MYSQL_PASSWORD=ktm42
 MYSQL_DATABASE=wordpress
+#WORDPRESS
+WP_TITLE="Mimmomodem Sicuro"
+WP_ADMIN=marasco
+WP_PASS=ph7
+WP_EMAIL=ktm@strmrt.ba
 #FTP
 FTP_USER=mabozz
 FTP_USER_PASS=forzabari
