--- a/srcs/requirements/wordpress/conf/php.ini
+++ b/srcs/requirements/wordpress/conf/php.ini
@@ -4,3 +4,8 @@ upload_max_filesize = 64M
 post_max_size = 64M
 max_input_vars = 1000
 date.timezone = "Europe/Rome"
+opcache.enable=1
+opcache.enable_cli=1
+opcache.memory_consumption=128
+opcache.max_accelerated_files=4000
+opcache.revalidate_freq=60
