--- a/srcs/.env
+++ b/srcs/.env
@@ -1,16 +1,16 @@
-DOMAIN_NAME=mbozzi.42.fr
+DOMAIN_NAME=login.42.fr
 # ssl certificates
 CERTS_SSL=/home/${USER}/.certs/
 # MYSQL SETUP
-MYSQL_ROOT_PASSWORD=thegoat
-MYSQL_USER=mbozzi
-MYSQL_PASSWORD=ktm42
+MYSQL_ROOT_PASSWORD=sql_root
+MYSQL_USER=sql_user
+MYSQL_PASSWORD=sql_pass
 MYSQL_DATABASE=wordpress
 #WORDPRESS
-WP_TITLE="Mimmomodem Sicuro"
-WP_ADMIN=marasco
-WP_PASS=ph7
-WP_EMAIL=ktm@strmrt.ba
+WP_TITLE="Mimmomodem Secure"
+WP_ADMIN=wp_admin
+WP_PASS=wp_pass
+WP_EMAIL=login@42.fr
 #FTP
-FTP_USER=mabozz
-FTP_USER_PASS=forzabari
+FTP_USER=ftp_user
+FTP_USER_PASS=ftp_pass
